Percent's wrapping fix

--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,7 @@
     position: relative;
     text-align: center;
     width: 100%;
+    white-space: nowrap;
 }
 
 .coursearchiver_bar {
